# yggdrasil-decision-forests-with-server

./: Dockerfile  build.sh  run.sh
yggdrasil-decision-forests/examples_golang/standalone/: BUILD.bazel  cc_static_library.bzl  cmylib.cc  cmylib.h  compile_and_run.sh  compile_lib_and_run.sh  main.go
yggdrasil-decision-forests/examples_golang/standalone/generated_model/tmp/my_saved_model/1/: keras_metadata.pb  saved_model.pb
yggdrasil-decision-forests/examples_golang/standalone/generated_model/tmp/my_saved_model/1/assets/: 89d62da57f474d8fdata_spec.pb  89d62da57f474d8frandom_forest_header.pb
yggdrasil-decision-forests/examples_golang/standalone/generated_model/tmp/my_saved_model/1/variables/: variables.data-00000-of-00001  variables.index
yggdrasil-decision-forests/examples_golang/standalone/lib/: mylib.cc  mylib.hh
yggdrasil-decision-forests/examples_with_server/standalone/: BUILD.bazel  WORKSPACE  beginner.cc  compile_and_run.sh  conanfile.txt
yggdrasil-decision-forests/yggdrasil_decision_forests/utils/distribute/implementations/grpc/: grpc_worker_main.cc
